// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionMasterDetail> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-masterdetail xui-composition-is-finite"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetail> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-masterdetail xui-composition-is-finite"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetail> should include layout restriction class, if specified 1`] = `
<div
  className="xui-composition xui-composition-masterdetail xui-composition-is-finite xui-composition-masterdetail-retain-small"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;
